# obsidian-nsdi-ae

./: .gitignore  README.md
obsidian/: Cargo.toml  README.md  analyze_results.py  bench_tput.sh  benchmark_results.csv  latencies.txt  old_benchmark_throughput.sh  plot_microbenchmarks.py  run_microbenchmarks.sh  run_network_benchmark.sh  run_network_tests.sh  test_network_runs.sh  throughput_results.csv
obsidian/results/: analyze_results.py  latencies_1000_aps.txt  latencies_1200_aps.txt  latencies_1500_aps.txt  latencies_2000_aps.txt  latencies_2500_aps.txt  latencies_3000_aps.txt  latencies_3500_aps.txt  latencies_4000_aps.txt  latencies_5000_aps.txt  latencies_500_aps.txt  latencies_6000_aps.txt  latencies_7000_aps.txt  latencies_8000_aps.txt  quick_analysis.py  system_monitor_1000_aps.txt  system_monitor_1200_aps.txt  system_monitor_1500_aps.txt  system_monitor_2000_aps.txt  system_monitor_2500_aps.txt  system_monitor_3000_aps.txt  system_monitor_3500_aps.txt  system_monitor_4000_aps.txt
obsidian/src/: common.rs  field.rs  lib.rs  sketch.rs
rel_work/: README.md  plot_network_benchmarks.py  plot_throughput.py  run_all_benchmarks.sh  run_missing_benchmarks.sh  run_network_benchmarks.sh  run_noninteractive_100.sh  run_required_benchmarks.sh  run_throughput_benchmarks.sh  test_noninteractive_2configs.sh  test_noninteractive_higher_loads.sh  test_throughput_samples.sh
rel_work/addax/: README.md  (+2 more)
rel_work/seal-auction/: CMakeLists.txt  auc_bench.cpp  auction_benchmark.cpp  run_network_benchmark.sh
rel_work/seal-auction/results/: seal_network_25_1000.csv
(+69 files in other folders)
